--- a/Lab2/Task1/style.css
+++ b/Lab2/Task1/style.css
@@ -1,1 +1,225 @@
-{\rtf1}
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #f2f4f7;
+    overflow-y:auto;
+    width: 100%;
+    overflow-x: hidden;
+    height: 100vh;
+
+}
+
+
+.logo{
+    font-weight: bold;
+    color:#0866ff;
+    font-size:70px;
+    font-family:"Gill Sans MT";
+    #background-color: #8001ff;
+    margin:5px;
+}
+.words{
+    font-size:30px;
+    font-family:"Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+    #background-color: #1fba58;
+    margin:5px;
+}
+.main{
+    flex-shrink: 0;
+    flex-grow: 0;
+    margin-top: 300px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: stretch;
+    #background-color: #555555;
+    width: 70%;
+    height: 500px;
+
+}
+
+.inner{
+    margin: 10px;
+    #background-color: white;
+    padding: 10px;
+    border-radius: 10px;
+}
+.slogan{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items:center;
+
+    text-align: left;
+    width:40%;
+}
+.l{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items:flex-start;
+    text-align: left;
+}
+
+.login{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 10px;
+    width: 100%;
+    height: 100%;
+    #background-color: #f4442f;
+    padding: 0px;
+    box-shadow: -9px 7px 17px 0px rgba(34, 60, 80, 0.2);
+    border-radius: 10px;
+}
+fieldset{
+    width: 80%;
+    height: 10%;
+
+    border-radius: 10px;
+}
+input{
+    border: none;
+    outline: none;
+    width: 100%;
+    height:100%;
+}
+.pair{
+    border: 1px solid;
+    background-color: white;
+}
+.pair:active{
+    border-color: blue;
+}
+
+.form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 35%;
+    row-gap: 10px;
+    #background-color: aqua;
+}
+.signbutton{
+    border: none;
+    outline: none;
+    background-color: blue;
+}
+.signbutton:hover{
+    cursor: pointer;
+}
+.signin{
+    border: none;
+    outline: none;
+    width: 100%;
+    height: 100%;
+    background-color: blue;
+    font-weight: bold;
+    color: white;
+}
+.signin:hover{
+    cursor: pointer;
+}
+button{
+    display: flex;
+    justify-content: center; /* Центрируем по горизонтали */
+    align-items: center; /* Центрируем по вертикали */
+
+    font-size: 16px; /* Размер шрифта */
+
+}
+
+
+.createbutton{
+    border: none;
+    outline: none;
+    width: 50%;
+    height: 10%;
+    background-color: green;
+}
+.createbutton:hover{
+
+    cursor: pointer;
+
+}
+.create{
+    width: 100%;
+    height: 100%;
+    background-color: green;
+    border: none;
+    outline: none;
+    color: white;
+    font-weight: bold;
+}
+.create:hover{
+
+    cursor: pointer;
+}
+a{
+    text-decoration: none;
+}
+a:hover{
+    text-decoration: underline;
+}
+span{
+    font-weight: bold;
+}
+span:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+hr{
+    width: 80%;
+}
+.signup {
+    font-family: "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+    text-align: center;
+    padding: 2px;
+    #background-color: brown;
+}
+
+footer{
+    flex-grow: 1;
+    flex-shrink: 0;
+    margin-top: 150px;
+    background-color: white;
+    width: 100%;
+    row-gap: 10px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.footer{
+    width: 80%;
+    font-size:14px;
+    color: gray;
+}
+hr.footer{
+    width: 100%;
+}
+
+p.lang{
+    display: inline;
+    text-align: left;
+}
+.lang:hover{
+    cursor: pointer;
+    text-decoration: underline;
+}
+.plus{
+    display: inline;
+}
+.copyright{
+    text-align: left;
+}
+.copyright:hover{
+    cursor: pointer;
+    text-decoration: underline;
+}
