--- a/Lab3/Task2/style.css
+++ b/Lab3/Task2/style.css
@@ -1,8 +1,8 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
-    box-sizing: border-box;
+    font-family: "Gill Sans MT", sans-serif;
+
 }
 .container{
     width: 100%;
@@ -15,7 +15,7 @@
     width: 1150px;
     margin: 50px auto 20px;
     padding: 40px 30px 70px;
-    border-radius: 50px;
+
     background-color: rgb(255, 255, 255)	;
 }
 .do-app h2{
@@ -25,15 +25,13 @@
     margin-left: 10px;
     margin-bottom: 35px;
 }
-.do-app h2 img{
-    width: 30px;
-    margin-left: 10px;
-}
+
+
 .row{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-radius: 30px;
+
     padding-left: 20px;
     margin-bottom: 25px;
     background: #d1d1d1;
@@ -50,16 +48,16 @@ button{
     border: none;
     outline: none;
     padding: 16px 50px;
-    background: rgb(120, 102, 224);
+    background-color: #00A5D2;
     color: black;
     font-size: 17px;
-    border-radius: 30px;
+
 }
 ul li{
     list-style: none;
     font-size: 17px;
     padding: 12px 8px 12px 50px;
-    border-bottom: 1px solid lightgrey;
+    border: 1px solid lightgrey;
     user-select: none;
     position: relative;
 }
